2006-05-15 21:22 Nick Schermer

    * Fix 2.95 GCC warnings
    * Code cleanup and layout

2006-04-20 15:15 Nick Schermer

    * Version to 0.6.4

2006-04-20 15:01 Nick Schermer

    * panel-plugin/clipman-dialog.c: 
      * Destroy dialog when plugin is closed
      * Toggle buttons now apply directly
    * panel-plugin/clipman.c: 
      * Fix mem leak in read function.
      * Remove Primairy clips when selection is ignored
      * Improved the menu destroy function stuff

2006-04-09 19:50 Nick Schermer

    * Version to 0.6.3

2006-04-09 19:46 Nick Schermer

    * panel-plugin/clipman-dialog.c: 
      * Splitup in tabs
      * Added tooltips
      * Removed color button
      * Removed about dialog
    * panel-plugin/clipman.c: 
      * Patch from Daichi
      * Fix crash in free function
      * Removed colors
      * Fix toggle button problem
      * Fix regeneration of titles
      * Small improvements

2005-12-01 15:20 Nick Schermer

    * Version to 0.6.2

2005-12-01 15:15 Nick Schermer

    * panel-plugin/clipman-dialog.c: Added new behaviour options
    * panel-plugin/clipman.c: Applied new behaviour to the functions

2005-12-01 13:29 Nick Schermer

    * panel-plugin/clipman.c: 
      * Added function clipman_replace_text (code moved from clipman_item_clicked)
      * Moke some functions shared for use with new dialogs
    * panel-plugin/clipman-dialog.c: 
      * Added new rightclick dialog with option to change the clip content.
        clipman_question, clipman_question_response
      * Added clipman_edit, clipman_edit_response
      * Changed GTK_WIN_POS_CENTER_ALWAYS to GTK_WIN_POS_CENTER, because it's annoying

2005-12-01 19:31 Nick Schermer

    * panel-plugin/clipman.c: Make clipman_create_title UTF8 complaint.

2005-11-29 19:00 Nick Schermer

    * panel-plugin/clipman.c: Changed the toggle button handling a bit.
    * panel-plugin/clipman.c: Spell Check.

2005-11-29 10:30 Nick Schermer

    * panel-plugin/clipman.c: