@@ -144,9 +144,6 @@ clipman_configure (XfcePanelPlugin *plugin,
     ClipmanOptions *options;
     GSList         *group;
 
-    if (clipman->block)
-        return;
-    
     tooltips = gtk_tooltips_new ();
     
     options = g_new0 (ClipmanOptions, 1);
@@ -408,196 +405,4 @@ clipman_configure (XfcePanelPlugin *plugin,
         G_CALLBACK(clipman_configure_response), options);
     
     gtk_widget_show_all (dialog);
-}
-
-static void
-clipman_edit_response (GtkWidget     *dialog,
-                       int            response,
-                       ClipmanAction *action)
-{
-    gchar         *newtext;
-    GtkTextIter    start, end;
-    GtkTextBuffer *buffer;
-
-    if (response == GTK_RESPONSE_OK)
-    {
-        DBG("Question: Save new content");
-        
-        buffer =
-            gtk_text_view_get_buffer (GTK_TEXT_VIEW(action->text));
-
-        gtk_text_buffer_get_start_iter(buffer, &start);
-        gtk_text_buffer_get_end_iter(buffer, &end);
-        
-        newtext = gtk_text_buffer_get_text (buffer, &start, &end, FALSE);
-
-        if (newtext != NULL &&
-            strcmp(newtext, "")
-           )
-        {
-            clipman_replace_text (action->clip->text, newtext);
-            
-            g_free (action->clip->text);
-            g_free (action->clip->title);
-            
-            action->clip->text    = g_strdup (newtext);
-            action->clip->title   = clipman_create_title (newtext, action->clipman->MenuCharacters);
-        }
-        else
-        {
-            DBG ("new text was empty, old value not changed");
-        }
-        
-        gtk_text_buffer_delete(buffer, &start, &end);
-        g_free (newtext);
-        
-        /* Unlock */
-        action->clipman->block = FALSE;
-        
-        gtk_widget_destroy (action->text);
-        gtk_widget_destroy (dialog);
-    }
-    else if (response == GTK_RESPONSE_REJECT)
-    {
-        gtk_text_buffer_set_text (gtk_text_view_get_buffer (GTK_TEXT_VIEW (action->text)),
-                                  action->clip->text,
-                                  -1
-                                 );
-    }
-    else
-    {
-        DBG("Question: Close");
-        
-        /* Unlock */
-        action->clipman->block = FALSE;
-        
-        gtk_widget_destroy (action->text);
-        gtk_widget_destroy (dialog);
-    }
-}
-
-static void
-clipman_edit (ClipmanAction *action)
-{
-    GtkWidget *dialog;
-    GtkWidget *scroll;
-    GtkWidget *dialog_vbox;
-    
-    /* Block some function */
-    action->clipman->block = TRUE;
-    
-    dialog = gtk_dialog_new_with_buttons (_("Edit content"), 
-        GTK_WINDOW (gtk_widget_get_toplevel (GTK_WIDGET (action->clipman->plugin))),
-        GTK_DIALOG_DESTROY_WITH_PARENT |
-        GTK_DIALOG_NO_SEPARATOR,
-        GTK_STOCK_OK, GTK_RESPONSE_OK,
-        GTK_STOCK_UNDO, GTK_RESPONSE_REJECT,
-        GTK_STOCK_CANCEL, GTK_RESPONSE_CLOSE,
-            NULL);
-    gtk_window_set_position (GTK_WINDOW (dialog), GTK_WIN_POS_CENTER);
-    gtk_window_set_icon_name (GTK_WINDOW (dialog), "gtk-edit");
-    gtk_window_set_keep_above(GTK_WINDOW (dialog), TRUE);
-    gtk_widget_set_size_request (dialog, 400, 250);
-    gtk_window_stick (GTK_WINDOW (dialog));
-    
-    dialog_vbox = GTK_DIALOG (dialog)->vbox;
-    
-    scroll = gtk_scrolled_window_new (NULL, NULL);
-    gtk_box_pack_start (GTK_BOX (dialog_vbox), scroll, TRUE, TRUE, 0);
-    gtk_scrolled_window_set_policy (GTK_SCROLLED_WINDOW (scroll), GTK_POLICY_AUTOMATIC, GTK_POLICY_AUTOMATIC);
-    gtk_scrolled_window_set_shadow_type (GTK_SCROLLED_WINDOW (scroll), GTK_SHADOW_IN);
-        
-    action->text = gtk_text_view_new ();
-    gtk_text_view_set_pixels_above_lines (GTK_TEXT_VIEW (action->text), 2);
-    gtk_text_view_set_pixels_below_lines (GTK_TEXT_VIEW (action->text), 2);
-    gtk_text_view_set_left_margin (GTK_TEXT_VIEW (action->text), 2);
-    gtk_text_view_set_right_margin (GTK_TEXT_VIEW (action->text), 2);
-    gtk_container_add (GTK_CONTAINER (scroll), action->text);
-        
-    gtk_text_buffer_set_text (gtk_text_view_get_buffer (GTK_TEXT_VIEW (action->text)),
-                              action->clip->text,
-                              -1);
-    
-    g_signal_connect(dialog, "response",
-        G_CALLBACK(clipman_edit_response), action);
-    
-    gtk_widget_show_all (dialog);
-}
-
-static void
-clipman_question_response (GtkWidget *dialog, int response, ClipmanAction *action)
-{
-    DBG("...");
-    
-    if (response == GTK_RESPONSE_OK)
-    {
-        DBG("Question: Edit Content");
-        
-        clipman_edit (action);
-    }
-    else if (response == GTK_RESPONSE_REJECT)
-    {
-        DBG("Question: Delete");
-        
-        /* Check if this clip exists in the clipboard and if so remove it */
-        clipman_replace_text (action->clip->text, "");
-        
-        /* Remove the clip from the array */
-        g_ptr_array_remove (action->clipman->clips, action->clip);
-        clipman_free_clip (action->clip);
-        
-        action->clipman->block = FALSE;
-    }
-    else
-    {
-        DBG("Question: Close");
-        
-        action->clipman->block = FALSE;
-    }
-    
-    gtk_widget_destroy (dialog);
-}
-
-void
-clipman_question (ClipmanAction *action)
-{
-    GtkWidget *dialog, *image, *label, *hbox, *dialog_vbox;
-    
-    /* Check if blocked */
-    if (action->clipman->block)
-        return;
-    
-    /* Block the plugin because we're deleting something (maybe) */
-    action->clipman->block = TRUE;
-    
-    dialog = gtk_dialog_new_with_buttons (_("Question"), 
-        GTK_WINDOW (gtk_widget_get_toplevel (GTK_WIDGET (action->clipman->plugin))),
-        GTK_DIALOG_DESTROY_WITH_PARENT |
-        GTK_DIALOG_NO_SEPARATOR,
-        GTK_STOCK_EDIT, GTK_RESPONSE_OK,
-        GTK_STOCK_DELETE, GTK_RESPONSE_REJECT,
-        GTK_STOCK_CLOSE, GTK_RESPONSE_CLOSE,
-            NULL);
-    gtk_widget_set_size_request (dialog, 400, -1);
-    gtk_window_set_position (GTK_WINDOW (dialog), GTK_WIN_POS_CENTER);
-    gtk_window_set_icon_name (GTK_WINDOW (dialog), "gtk-dialog-question");
-    gtk_window_set_keep_above(GTK_WINDOW (dialog), TRUE);
-    gtk_window_stick (GTK_WINDOW (dialog));
-    
-    dialog_vbox = GTK_DIALOG (dialog)->vbox;
-    
-    hbox = gtk_hbox_new (FALSE, BORDER);
-    gtk_box_pack_start (GTK_BOX (dialog_vbox), hbox, TRUE, TRUE, 0);
-    gtk_container_set_border_width (GTK_CONTAINER (hbox), BORDER);
-    
-    image = gtk_image_new_from_icon_name ("gtk-dialog-question", GTK_ICON_SIZE_DIALOG);
-    gtk_box_pack_start (GTK_BOX (hbox), image, FALSE, TRUE, 0);
-    
-    label = gtk_label_new (_("What to do with this clipboard item?"));
-    gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 0);
-    
-    gtk_widget_show_all (dialog);
-    
-    g_signal_connect(dialog, "response",
-        G_CALLBACK(clipman_question_response), action);
 }
