@@ -1,3 +1,11 @@
+2006-05-17 19:19 Nick Schermer
+
+    * Removed the "Edit Clip Dialog", since it not
+      usefull enough.
+    * Fix memleak in free function
+    * Use gboolean instead of guint x:1
+    * Some style fixes and var renames
+
 2006-05-15 21:22 Nick Schermer
 
     * Fix 2.95 GCC warnings
